<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <EditText
            android:id="@+id/url_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/enter_url"
            android:inputType="textUri"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ScrollView
            android:id="@+id/header_scrollview"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@+id/url_et"
            app:layout_constraintStart_toStartOf="@+id/url_et"
            app:layout_constraintTop_toBottomOf="@+id/url_et">

            <EditText
                android:id="@+id/header_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/enter_header"
                android:inputType="textMultiLine"
                android:minHeight="48dp"
                android:textColorHint="#757575" />
        </ScrollView>

        <RadioGroup
            android:id="@+id/rb_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header_scrollview">

            <RadioButton
                android:id="@+id/get_rb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/get_request" />

            <RadioButton
                android:id="@+id/post_rb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/post_request" />
        </RadioGroup>

        <ScrollView
            android:id="@+id/body_scrollview"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@+id/url_et"
            app:layout_constraintStart_toStartOf="@+id/url_et"
            app:layout_constraintTop_toBottomOf="@+id/rb_group"
            >

            <EditText
                android:id="@+id/body_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/enter_request_body"
                android:inputType="textMultiLine"
                android:minHeight="48dp" />
        </ScrollView>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/response_code"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/responsecode_tv" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/request_response_headers"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/header_tv" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/request_response_body"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/body_tv" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/errors"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/errors_tv" />

        <TextView
            android:id="@+id/responsecode_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/test_btn"
            tools:text="200" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/header_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/responsecode_tv"
            app:layout_constraintTop_toBottomOf="@+id/responsecode_tv"
            tools:text="Accept: application/json \nContent-Type: application/json" />

        <TextView
            android:id="@+id/body_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/header_tv"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/header_tv"
            app:layout_constraintTop_toBottomOf="@+id/header_tv"
            tools:text="{\nid: 1,\ntitle: 'foo',\nbody: 'bar',\nuserId: 1\n}
" />

        <TextView
            android:id="@+id/errors_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/header_tv"
            app:layout_constraintStart_toStartOf="@+id/body_tv"
            app:layout_constraintTop_toBottomOf="@+id/body_tv"
            tools:text="No Internet Connection" />

        <Button
            android:id="@+id/test_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/test"
            app:layout_constraintEnd_toEndOf="@+id/url_et"
            app:layout_constraintStart_toStartOf="@+id/url_et"
            app:layout_constraintTop_toBottomOf="@+id/body_scrollview" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
